# blueberry_s4

./: .gitignore  AGENTS.md  PROJECT_LOG.md  README.md  README.md.bak  README_EN.md  test_agv_control.py  test_agv_full.py  test_simple.py  test_unlock.py  test_unlock_v2.py  test_vehicle_control.py  test_whj_py.sh
config/: README.md  can_devices.yaml  config_loader.py  hardware_profile.yaml
docs/: ZLG_CANFD_SETUP.md  architecture_recommendation.md  can_id_discovery.md
docs/can_design/: can_architecture_comparison.md
docs/deployment/: remote_access_guide.md  safe_deployment_guide.md
docs/ros2_setup/: ros2_beginner_guide.md  visualization_tools.md
drivers/: install_zlg_socketcan.sh
drivers/peak-linux-driver-8.18.0/libpcanbasic/doc/: PCANBasic_enu_linux_addenda.txt
drivers/peak-linux-driver-8.18.0/libpcanbasic/examples/NativeC++/: EventDrivenRead  GetSetParameter  LookUpChannel  ManualRead  ManualWrite  ThreadRead  TimerRead  TimerWrite  TraceFiles
drivers/peak-linux-driver-8.18.0/libpcanbasic/examples/NativeC++/02_GetSetParameter/: 02_GetSetParameter.cpp
drivers/peak-linux-driver-8.18.0/libpcanbasic/examples/NativeC++/03_ManualRead/: 03_ManualRead.cpp
drivers/peak-linux-driver-8.18.0/libpcanbasic/examples/c/: pcaneventread  pcaneventwrite  pcanread  pcanwrite
drivers/peak-linux-driver-8.18.0/libpcanbasic/pcanbasic/include/: PCANBasic.cs  PCANBasic.h  PCANBasic.vb
drivers/peak-linux-driver-8.18.0/libpcanbasic/pcaninfo/: pcaninfo  pcaninfo.1.3.2
drivers/peak-linux-driver-8.18.0/test/: pcanfdtst  receivetest_posix  transmitest_posix
drivers/usbcanfd200_400u_2.10/: .Module.symvers.cmd  .modules.order.cmd  .usbcanfd.ko.cmd  .usbcanfd.mod.cmd  .usbcanfd.mod.o.cmd  .usbcanfd.o.cmd  modules.order  usbcanfd.ko  usbcanfd.mod
drivers/zlg_usbcanfd_2_10/: README.md  install.sh  usbcanfd.ko  usbcanfd.mod  usbcanfd.mod.c
scripts/: build.sh  can_debug_test.sh  can_initializer.py  can_manager.sh  check_env.sh  check_workspace.sh  deploy_to_jetson.sh  fix_peak_usb.sh  install_can_service.sh  install_peak_driver.sh  install_peak_driver_fixed.sh  install_peak_service.sh  install_peak_usb_driver.sh  install_udev_rules.sh  jetson_precheck.sh  quick_test.sh  run.sh  s4  setup_can.sh  setup_peak_auto.sh  setup_peak_socketcan.sh  setup_ros2_env.sh  start_agv_test.sh  start_robot.sh  status.sh  stop_robot.sh  test_peak.sh  test_s4.sh
src/KINCO/: README.md  README_CN.md  README_EN.md
src/KINCO/kinco_can_control/: CMakeLists.txt  package.xml
src/KINCO/kinco_can_control/include/kinco_can_control/: kinco_can_control_node.hpp
src/KINCO/kinco_can_control/launch/: kinco_can_control.launch.py
src/KINCO/kinco_can_control/params/: cfg.yaml
src/KINCO/kinco_can_control/src/: kinco_can_control_node.cpp
src/KINCO/kinco_can_interfaces/: CMakeLists.txt  package.xml
src/KINCO/kinco_can_interfaces/msg/: KincoCmd.msg  KincoState.msg
src/REALMAN-WHJ/: README.md  README_CN.md  README_EN.md
src/REALMAN-WHJ/whj_can_control/: CMakeLists.txt  package.xml
src/REALMAN-WHJ/whj_can_control/include/whj_can_control/: whj_can_control_node.hpp
src/REALMAN-WHJ/whj_can_control/launch/: whj_can_control.launch.py
src/REALMAN-WHJ/whj_can_control/params/: cfg.yaml
src/REALMAN-WHJ/whj_can_control/src/: whj_can_control_node.cpp
src/REALMAN-WHJ/whj_can_interfaces/: CMakeLists.txt  package.xml
src/REALMAN-WHJ/whj_can_interfaces/msg/: WhjCmd.msg  WhjState.msg
src/REALMAN-WHJ/whj_can_py/: README.md  package.xml  setup.py
src/REALMAN-WHJ/whj_can_py/launch/: whj_can_py.launch.py
src/REALMAN-WHJ/whj_can_py/whj_can_py/: __init__.py  __main__.py  whj_can_node.py
src/REALMAN-WHJ/whj_can_py/whj_can_py/core/: __init__.py  socketcan_driver.py  zlgcan_driver.py
src/REALMAN-WHJ/whj_can_py/whj_can_py/core/protocol/: __init__.py  kinco_protocol.py  whj_protocol.py
src/REALMAN-WHJ/whj_can_py/whj_can_py/drivers/: __init__.py  base_driver.py  whj_driver.py  whj_motor_control.py
src/RealMan-WHJ/: README.md
src/RealMan-WHJ/whj_can_control/: CMakeLists.txt  package.xml
src/RealMan-WHJ/whj_can_control/include/whj_can_control/: whj_can_control_node.hpp
src/RealMan-WHJ/whj_can_control/launch/: whj_can_control.launch.py
src/RealMan-WHJ/whj_can_control/params/: whj_config.yaml
src/RealMan-WHJ/whj_can_control/scripts/: test_whj_can.py
src/RealMan-WHJ/whj_can_control/src/: whj_can_control_node.cpp
src/RealMan-WHJ/whj_can_interfaces/: CMakeLists.txt  package.xml
src/RealMan-WHJ/whj_can_interfaces/msg/: PositionCmd.msg  PositionFb.msg  StateFb.msg  StatusFb.msg  VelocityCmd.msg
src/YUHESEN-FW-MAX/: README(中文).md  README.md
src/YUHESEN-FW-MAX/yhs_can_control/include/yhs_can_control/: yhs_can_control_node.hpp
src/YUHESEN-FW-MAX/yhs_can_control/params/: cfg.yaml
src/YUHESEN-FW-MAX/yhs_can_control/src/: yhs_can_control_node.cpp
src/YUHESEN-FW-MAX/yhs_can_interfaces/: CMakeLists.txt
src/YUHESEN-FW-MAX/yhs_can_interfaces/msg/: ChassisInfoFb.msg
src/bringup/: package.xml  setup.cfg  setup.py
src/bringup/bringup_module/: __init__.py
src/bringup/config/: robot.yaml  s4.rviz
src/bringup/launch/: robot.launch.py
src/bringup/layouts/: s4_default.json
web_dashboard/: AGV_TEST_README.md  README.md  agv_test_control.html  app.js  gen.py  index.html  s4_dashboard.html  s4_dashboard_backup.html  start_web_dashboard.sh  style.css
(+3 files in other folders)
