<?xml version="1.0"?>
<package format="3">
  <name>whj_can_py</name>
  <version>0.1.0</version>
  <description>RealMan WHJ motor driver using Python (ZLG CAN-FD)</description>
  <maintainer email="xuhao6815@gmail.com">Blueberry Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>whj_can_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
